[gd_scene load_steps=5 format=3 uid="uid://cxbvten6hicg6"]

[ext_resource type="Script" path="res://classes/reset_notepad.gd" id="1_mbmed"]
[ext_resource type="Texture2D" uid="uid://cluu8l7qkiff0" path="res://UI/NOTEPAD2.png" id="2_oaygo"]
[ext_resource type="Texture2D" uid="uid://bpu034sg6ei5" path="res://UI/BUTT_OFF.png" id="3_y0jyv"]
[ext_resource type="Texture2D" uid="uid://cmh4ga3gj2gbo" path="res://UI/BUTT_ON.png" id="4_e3nni"]

[node name="ResetNotepad" type="Node2D"]
script = ExtResource("1_mbmed")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oaygo")

[node name="TextureButton" type="TextureButton" parent="Sprite2D"]
offset_left = -201.0
offset_top = -60.0
offset_right = 186.0
offset_bottom = 42.0
texture_normal = ExtResource("3_y0jyv")
texture_hover = ExtResource("4_e3nni")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Sprite2D/TextureButton" to="." method="_on_texture_button_pressed"]
